# ice-cream-shop

backend/: .gitignore  fastapi_app.py  main.py  pyproject.toml
backend/app/models/: employee.py  order.py  product.py
backend/app/models/enums/: collections.py
backend/app/routers/: employees.py  orders.py  products.py
backend/db/: db_manager.py
backend/db/firebase/: firestore_manager.py
backend/firebase/: credentials.json  firestore.py
frontend/: Dockerfile  angular.json  package-lock.json  package.json
frontend/deployment/: Dockerfile
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
frontend/src/app/actions/: actions.component.html  actions.component.scss  actions.component.ts
frontend/src/app/employee/: employee.component.html  employee.component.scss  employee.component.ts
frontend/src/app/header/: header.component.html  header.component.scss
frontend/src/app/items/: items.component.html  items.component.scss  items.component.ts
frontend/src/app/models/: cart.ts  index.ts  products.ts  receipt.ts
frontend/src/app/past-orders/: past-orders.component.html  past-orders.component.scss  past-orders.component.ts
frontend/src/app/receipt/: receipt.component.html  receipt.component.scss  receipt.component.ts
frontend/src/app/services/: create-order.service.ts  rest.service.ts
frontend/src/app/stepper/: stepper.component.html  stepper.component.scss
frontend/src/app/sub-header/: sub-header.component.html  sub-header.component.scss  sub-header.component.ts
(+13 files in other folders)
