[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Mytz_19"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
firebase-admin = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
